# inknit

./: .clang-format  .editorconfig  .env.sample  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  readme.md
benchmarks/inknit/: CMakeLists.txt  benchmark_main.cpp  blit.cpp  circle.cpp  constants.hpp  hline.cpp  line.cpp  vline.cpp
benchmarks/inknit/utils/: base.cpp  base.hpp  boxplot.cpp  boxplot.hpp  executor.cpp  inkbm.hpp  platform-pico.cpp  platform-unix.cpp  platform-windows.cpp  platform.h  registry.cpp  scale.cpp  scale.hpp  scale_impl.hpp  timer.hpp  types.hpp
benchmarks/inknit/utils/monitors/: quantiler.cpp  quantiler.hpp  welford.cpp  welford.hpp
cmake/: Bootstrap.cmake  CompilerConfig.cmake  FindDoctest.cmake  FindLlvmConfig.cmake  InknitUtils.cmake
cmake/Platform/: Pico.cmake
cmake/scripts/: GenerateTemplate.cmake
cmake/toolchains/: common-clang.cmake  common-gcc.cmake  linux-aarch64-clang.cmake  linux-aarch64-gcc.cmake  linux-x86-clang.cmake  linux-x86-gcc.cmake  linux-x86_64-clang.cmake  linux-x86_64-gcc.cmake  pico-common-gcc.cmake  pico-rp2040-gcc.cmake  pico-rp2350-gcc.cmake  win32-x86-gcc.cmake  win32-x86_64-gcc.cmake
scripts/: copy_dlls.sh  debug_linux.sh  exec_linux.sh
src/: CMakeLists.txt
src/inknit/: .clang-format  CMakeLists.txt  assertion.c  inknit_impl.h  macro_impl.h  message.h
src/inknit/inc/: inknit.h  inknit_exports.h  inknit_internal.h
src/inknit/inc/inknit/: assertion.h  macro.h  prefix.h  proto.h  proto.h.in  proto_internal.h.in  types.h  x1.h  x1lsb.h  x2.h  x2lsb.h  x4.h  x4lsb.h
src/inknit/shared/: draw_line.c  draw_line.h  helpers.h
src/inknit/templates/: base.h.in  blit.c.in  get_pixel.c.in  primitive.c.in  proto.h.in
src/inknit/templates/draw/: circle.c.in  ellipse.c.in  hline.c.in  line.c.in  point.c.in  rect.c.in  vline.c.in
src/inknit/templates/fill/: circle.c.in  ellipse.c.in  rect.c.in
src/inknit/x1/: base.h  config.h  draw_point_armv6m.s  draw_point_armv8m.s  draw_point_x86.s  draw_vline_armv6m.s  draw_vline_armv8m.s  draw_vline_x86.s  exports.c
src/inknit/x1lsb/: base.h  config.h  draw_point_armv6m.s  draw_point_armv8m.s  draw_point_x86.s  draw_vline_armv6m.s  draw_vline_armv8m.s  draw_vline_x86.s  exports.c
src/inknit/x2/: base.h  config.h  draw_point_armv6m.s  draw_point_armv8m.s  draw_point_x86.s  draw_vline_armv6m.s  draw_vline_armv8m.s  draw_vline_x86.s  exports.c
src/inknit/x2lsb/: base.h  config.h  draw_point_armv6m.s  draw_point_armv8m.s  draw_point_x86.s  draw_vline_armv6m.s  draw_vline_armv8m.s  draw_vline_x86.s  exports.c
src/inknit/x4/: base.h  config.h  draw_point_armv6m.s  draw_point_armv8m.s  draw_point_x86.s  draw_vline_armv6m.s  draw_vline_armv8m.s  draw_vline_x86.s  exports.c
src/inknit/x4lsb/: base.h  config.h  draw_point_armv6m.s  draw_point_armv8m.s  draw_point_x86.s  draw_vline_armv6m.s  draw_vline_armv8m.s  draw_vline_x86.s  exports.c
src/inknit_cxx/: CMakeLists.txt
src/inknit_cxx/format/: auto-posix.cpp  block.cpp  character.cpp  sixel.cpp
src/inknit_cxx/inc/: inknit.hpp
src/inknit_cxx/inc/inknit/: base.hpp  drawable.hpp  drawable.hpp.in  format.hpp
src/inknit_cxx/utils/: termmode_guard.hpp
tests/: CMakeLists.txt
tests/inknit/: CMakeLists.txt  blit.cpp  clear.cpp  inknit_test.hpp  test_main.cpp
tests/inknit/draw/: circle.cpp  ellipse.cpp  hline.cpp  line.cpp  point.cpp  rect.cpp  rect_coord.cpp  rectp.cpp  vline.cpp
tests/inknit/fill/: circle.cpp  ellipse.cpp  rect.cpp  rect_coord.cpp
tests/inknit/utils/: assert_helper.cpp  assert_helper.hpp  macro.hpp  primitive.hpp  test_image.cpp  test_image.hpp
